# ascend-docker-kit

./: .coverage  CLAUDE.md  README.md  README.zh-CN.md  adk.py  pyproject.toml  requirements.txt
adk_core/: __init__.py  analyzer.py  checksum.py  exceptions.py  generator.py  matrix.py  models.py  version.py
data/: compatibility.yaml
docs/: PROJECT-STATUS.md
docs/design/: technical-design.md
docs/progress/: 2026-01-18-project-initialization.md  2026-01-23-remaining-issues-checklist.md
docs/reports/: 2026-01-18-core-data-layer-acceptance.md  2026-01-21-project-acceptance.md  environment-analyzer-acceptance.md
docs/reports/completed/: 2026-01-18-core-data-layer.md  environment-analyzer.md
docs/standards/: documentation-guide.md
docs/templates/: progress-template.md  report-template.md
examples/mindspore-2.3-910b/: Dockerfile  README.md  docker-compose.yml  run.sh  test_npu.py
examples/pytorch-2.4-910b/: Dockerfile  README.md  docker-compose.yml  run.sh  test_npu.py
scripts/: check_npu.sh  install_cann.sh
skills/: ascend-docker-kit-patterns.md
templates/: Dockerfile.base.j2  Dockerfile.cann.j2  Dockerfile.mindspore.j2  Dockerfile.pytorch.j2
tests/: __init__.py  test_analyzer.py  test_edge_cases.py  test_matrix.py
